syslogWorker to Configuration Management FF

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -280,3 +280,12 @@ For detailed information about the new API endpoints and configuration options, 
 #### Site separation
 
 - Devices now automatically inherit their site name from connected peers via **CDP/LLDP**, **STP topology neighbors**, or devices in the same **L3 network**, in order of priority, when rule **Try to assign devices without sites based on device neighborship** is enabled.
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
+
+#### Configuration Management Optimizations
+
+To accelerate device configuration retrieval, enable [Git performance optimizations](../../System_Administration/Command_Line_Interface/Feature_Flags.md#configuration-management-optimizations) for configuration management.  
+
