NIM-19584-BGP-Communities-issues

--- a/docs/releases/release_notes/7.2.md
+++ b/docs/releases/release_notes/7.2.md
@@ -96,6 +96,25 @@ If the IP Fabric GUI redirects to the status page after an upgrade and displays 
 
 After these steps, the GUI should function correctly.  
 
+#### BGP Communities Filtering Issues
+
+The new BGP communities filtering feature during discovery correctly passes tags to settings **only in automatic snapshots**. However:
+
+1. Manual snapshot triggers fail to activate this feature
+
+2. Even when tags are passed correctly, **filters aren't applied** during Cisco IOS-XR discovery
+
+3. Any modifications to these sections:
+
+   - `Configuration Management`  
+   - `Snapshot Retention`  
+   - `System → SNMP`  
+   - `System → Backup & Maintenance`  
+
+   **remove** the BGP communities filter from `Discovery Settings`  
+
+These issues are scheduled for resolution in an upcoming patch release.
+
 ## v7.2.5 (March 17th, 2025; EA)
 
 ### API Endpoints Deprecation
@@ -279,5 +298,5 @@ Newly added features which need to be explicitly enabled in service files. You c
 
 #### Configuration Management Optimizations
 
-To accelerate device configuration retrieval, enable [Git performance optimizations](../../System_Administration/Command_Line_Interface/Feature_Flags.md#configuration-management-optimizations) for configuration management.  
+To accelerate device configuration retrieval, you can try to enable different [Git performance optimizations](../../System_Administration/Command_Line_Interface/Feature_Flags.md#configuration-management-optimizations) for configuration management.  
 
