add-manual-link-feature-flag-name-to-release-note

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -15,6 +15,36 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 ## `v7.3.0` (UNRELEASED)
 
+### New Features
+
+#### IPv6 Discovery Support
+
+Extended network discovery capabilities to support IPv6 networks alongside IPv4, ensuring all existing IPv4 functionality remains unaffected.
+
+##### Backward Compatibility
+
+- Existing IPv4 discovery workflows continue to function as expected.
+- No changes are required for IPv4-only setups.
+
+##### API Enhancements
+
+- The `/settings` API now accepts and processes **IPv6 addresses** in:
+  - Seed lists
+  - Include/Exclude/Whitelist networks
+  - Device credentials
+  - Custom SSH/Telnet ports
+- Address-type validation ensures that:
+  - IPv4 filters apply only to IPv4 addresses
+  - IPv6 filters apply only to IPv6 addresses
+
+##### Discovery Configuration Updates
+
+- Introduced a new task type: `NDPv6`, available under **Global Discovery Tasks** settings.
+- IPv6 networks can now be discovered using a combination of:
+  - Seed addresses
+  - Include/Exclude/Whitelist networks
+  - Device credentials
+
 ### Improvements
 
 #### GUI
@@ -44,34 +74,6 @@ description: In this section, you can find the release notes for `v7.3` releases
 In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
 is now fully supported at the API level and is also fully integrated into the UI starting with this release.
 
-#### IPv6 Support to Discovery
-
-Extended network discovery capabilities to support IPv6 networks alongside IPv4, ensuring all existing IPv4 functionality remains unaffected.
-
-##### Backward Compatibility
-
-- Existing IPv4 discovery workflows continue to function as expected.
-- No changes are required for IPv4-only setups.
-
-##### API Enhancements
-
-- The `/settings` API now accepts and processes **IPv6 addresses** in:
-  - Seed lists
-  - Include/Exclude/Whitelist networks
-  - Device credentials
-  - Custom SSH/Telnet ports
-- Address-type validation ensures that:
-  - IPv4 filters apply only to IPv4 addresses
-  - IPv6 filters apply only to IPv6 addresses
-
-##### Discovery Configuration Updates
-
-- Introduced a new task type: `NDPv6`, available under **Global Discovery Tasks** settings.
-- IPv6 networks can now be discovered using a combination of:
-  - Seed addresses
-  - Include/Exclude/Whitelist networks
-  - Device credentials
-
 #### Configuration Management
 
 - Simplified configuration selection for comparison.
@@ -99,34 +101,17 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - Identification: Firmware prefix `CS` and Monitoring Version `n/a`  
   - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md).
 
-#### Initial Transparent Firewall Support (Behind Feature Flag)
+#### Path Lookup
 
-Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**,
-manual link configuration is required to incorporate them into the network model.  
-
-To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) must be activated. Once enabled,
-transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
-
- **Supported Vendors & Technologies**
-
- - **Virtual Wire Setup**
- 
-  A new table has been added under **Technology → Interfaces → Virtual-wires**, supporting:
-  
-  - Palo Alto PAN-OS
-  - Cisco Firepower
-  - Fortinet FortiGate / FortiOS
-  - Forcepoint NGFW
-
- - **Virtual Bridge Property**
- 
-  Currently supported for Cisco Firepower. A new **Virtual Bridge** attribute has been added to the following tables:
- 
-  - **Technology → Interfaces → Switchport**
-  - **Technology → Addressing → MAC Table**
+- Using Palo Alto's `External Dynamic List` in combination with end-to-end path lookup:
+  - To investigate a Path Lookup scenario for a specific IP expected to be in the dynamic list, use the `Source / Destination IP fields` and enter the IP address.
+  - If the content of the dynamic list is not available, or if you need to find where a specific list is being used, use the `Source / Destination Region fields`
+and enter the name of the list as it appears in the configuration.
 
 #### Vendor Support and Improvements
 
+- Interface uptime/downtime is now available for **Arista**.
+- Switch priority is now available for **Cisco** **StackWise**.
 - Added IPv6 support for the FortiGate zone firewall task.
 - Added IPv6 support for FortiGate GRE tunnels.
 - Added IPv6 support for the Cisco ACI, ASA, IOS, and IOS-XE NTP task.
@@ -137,18 +122,6 @@ transparent firewalls will appear in the **graph topology**, and **basic path lo
 - Added IPv6 support for Cisco ASA IPv6 routing.
 - Added IPv6 support for Cisco ASA IPv6 tunnels.
 - Added IPv6 support for Cisco ASA, IOS, and IOS-XE IPv6 IPsec.
-
-#### Path Lookup
-
-- Using Palo Alto's `External Dynamic List` in combination with end to end path lookup:
-  - To investigate a Path Lookup scenario for a specific IP expected to be in the dynamic list, use the `Source / Destination IP fields` and enter the IP address.
-  - If the content of the dynamic list is not available, or if you need to find where a specific list is being used, use the `Source / Destination Region fields`
-and enter the name of the list as it appears in the configuration.
-
-#### Vendor Support and Improvements
-
-- Interface uptime/downtime is now available for **Arista**.
-- Switch priority is now available for **Cisco** **StackWise**.
 - Downloading the content of the `External Dynamic List` object for **Palo Alto**'s URL Filtering and IP List must be
 [enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_PALOALTO_EDL_IPLIST`, `ENABLE_PALOALTO_EDL_URLLIST`).
 
@@ -223,3 +196,34 @@ now support **Uptime** as a device property.
 - *Technology > Management > AAA > Password Strength* - **Password Strength Enabled**
   - Green Success - Check is enabled on supported platforms
   - Amber Warning - Check is not enabled  on supported platforms
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
+
+#### Transparent Firewalls
+
+Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**,
+manual link configuration is required to incorporate them into the network model.
+
+To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) (`ENABLE_MANUAL_LINKS`) must be activated.
+
+Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
+
+##### Supported Vendors & Technologies
+
+ - **Virtual Wire Setup**
+
+  A new table has been added under **Technology → Interfaces → Virtual-wires**, supporting:
+
+  - Palo Alto PAN-OS
+  - Cisco Firepower
+  - Fortinet FortiGate / FortiOS
+  - Forcepoint NGFW
+
+ - **Virtual Bridge Property**
+
+  Currently supported for Cisco Firepower. A new **Virtual Bridge** attribute has been added to the following tables:
+
+  - **Technology → Interfaces → Switchport**
+  - **Technology → Addressing → MAC Table**
