NIM-17789 adding new columns to docs 7.3

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -53,6 +53,24 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - `Last Status Change`
 - An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
   - `Switch Priority`
+- An additional columns were added to the **Technology** --> **Management** --> **Logging** --> **Remote** table:
+  - `Host IPv4`
+  - `Host IPv6`
+  - `Src Address IPv4`
+  - `Src Address IPv6`
+- An additional columns were added to the **Technology** --> **Management** --> **NTP** --> **Sources** table:
+  - `Source IPv4`
+  - `Source IPv6`
+- An additional columns were added to the **Technology** --> **Management** --> **SNMP** --> **Trap Hosts** table:
+  - `Destination Host IPv4`
+  - `Destination Host IPv6`
+  - `Source IPv4`
+  - `Source IPv6`
+- An additional columns were added to the **Technology** --> **Security** --> **AAA** --> **Servers** table:
+  - `Server IPv4`
+  - `Server IPv6`
+  - `Source IPv4`
+  - `Source IPv6`
 - Removed tables of already deprecated API endpoints:
   - `Managed Networks`
   - `Gateway Redundancy`
