--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -37,9 +37,11 @@ tags: ["draft"]
 - Added support for the Cisco ACI AAA task.
 - Added support for the Cisco ACI SNMP task.
 - Added IPv6 support for the Cisco IOS-XE IS-IS task.
-- Added IPv6 support for the Cisco ASA BGP Neighbors task.  
+- Added IPv6 support for the Cisco ASA BGP Neighbors task.
+- Added support for multi-segment routing for VeloCloud (only IPv4).
 - Added support for the MAC address table on Meraki switches. 
 - Added mapping for STP port statuses on Meraki switches.
+
 #### Configuration Management
 
 - Configuration Management now fully supports IPv6-configured devices with all available functionalities.
