--- a/docs/releases/release_notes/7.4.md
+++ b/docs/releases/release_notes/7.4.md
@@ -41,6 +41,14 @@ tags: ["draft"]
 - Added support for multi-segment routing for VeloCloud (only IPv4).
 - Added support for the MAC address table on Meraki switches. 
 - Added mapping for STP port statuses on Meraki switches.
+- A new task Cloud Subnets was added to save more information related to cloud subnets in the device JSON.
+- A new task Cloud Scaling Groups was added to save more information related to scaling groups in the device JSON.
+- Tables in **Technology → Cloud → Endpoints** now also include instances from Azure Virtual Machine Scale Sets in Uniform mode.
+
+  !!! warning "Do not forget to update IAM policy"
+
+      To collect VM instances from Azure Virtual Machine Scale Sets in Uniform mode, the corresponding IAM policy must be updated. 
+      You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_5.json).
 
 #### Configuration Management
 
