Add ACI service graphs l2 e2e

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -99,13 +99,13 @@ is now fully supported at the API level and is also fully integrated into the UI
 
 #### Network Discovery
 
-- **New Device** –- **AWS Application Load Balancer (ALB)**
+- **New Device -- AWS Application Load Balancer (ALB)**
   - Initial support for data collection & inventory. The path lookup via ALB is not supported yet.
 
-- **New Device** –- **Azure ExpressRoute Circuit (ERC)**
+- **New Device -- Azure ExpressRoute Circuit (ERC)**
   - Data collection and end-to-end path lookup via ERC is now supported. The path lookup via ERC when deployed in vWAN is not supported yet.
 
-- **New Device** –- **Azure RouteServer (ARS)**
+- **New Device -- Azure RouteServer (ARS)**
   - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
 
 - **New Capabilities -- CheckPoint, Juniper**
@@ -114,7 +114,7 @@ is now fully supported at the API level and is also fully integrated into the UI
 - **New Capabilities -- PaloAlto (PAN-OS)**
   - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
 
-- **New Device** – **Meraki cloud-managed Catalyst switches**
+- **New Device -- Meraki Cloud-managed Catalyst Switches**
   - Now discoverable via the Meraki API  
   - Identification: Firmware prefix `CS` and Monitoring Version `n/a`  
   - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md).
@@ -218,6 +218,13 @@ now support **Uptime** as a device property.
 ### Experimental Features
 
 Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
+
+
+#### Cisco ACI Service Graphs Improvements
+
+The path lookup capability for Layer 2 (L2) has been added to Cisco ACI Service Graphs.
+
+To collect Service Graph data, the feature flag `ENABLE_ACI_SERVICEGRAPHS_ENDPOINTS` must be enabled. For more information, see [feature flag documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-service-graphs).
 
 #### Transparent Firewalls
 
