NIM-19655 adding new stack column to 7.3 RN

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -71,6 +71,8 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - `Server IPv6`
   - `Source IPv4`
   - `Source IPv6`
+- An additional column was added to the  **Inventory** --> **Devices** table:
+  - `Switch stack`
 - Removed tables of already deprecated API endpoints:
   - `Managed Networks`
   - `Gateway Redundancy`
@@ -140,6 +142,7 @@ and enter the name of the list as it appears in the configuration.
 - Added IPv6 support for Cisco ASA IPv6 routing.
 - Added IPv6 support for Cisco ASA IPv6 tunnels.
 - Added IPv6 support for Cisco ASA, IOS, and IOS-XE IPv6 IPsec.
+- New `Switch stack` column added in **Inventory** --> **Devices** to show if switch is considered as stack
 - Downloading the content of the `External Dynamic List` object for **Palo Alto**'s URL Filtering and IP List must be
 [enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_PALOALTO_EDL_IPLIST`, `ENABLE_PALOALTO_EDL_URLLIST`).
 
