NAE/NIM-19651 - route-map support added for Arista

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -110,6 +110,9 @@ is now fully supported at the API level and is also fully integrated into the UI
 - **New Device -- Azure RouteServer (ARS)**
   - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
 
+- **New Capabilities -- Arista**
+  - Support for route-maps has been added.
+
 - **New Capabilities -- CheckPoint, Juniper**
   - Support for URL filtering has been added.
 
