NAE/NIM-19651 - route-map support added for Arista

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -88,6 +88,9 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 - **New Device** –- **Azure RouteServer (ARS)**
   - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
 
+- **New Capabilities -- Arista**
+  - Support for route-maps has been added.
+
 - **New Capabilities -- CheckPoint, Juniper**
   - Support for URL filtering has been added.
 
