NIM-19650 add loginIp columns documentation

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -51,8 +51,27 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 
 - An additional column was added to the **Inventory** --> **Interfaces** table:
   - `Last Status Change`
+- An additional column was added to the **Inventory** --> **Devices** table:
+  - `Login IPv4`
+  - `Login IPv6`
+  - `Switch stack`
+- An additional column was added to the **Management** --> **Discovery History** table:
+  - `Login IPv4`
+  - `Login IPv6`
+- An additional column was added to the **Management** --> **Changes** table:
+  - `Login IPv4`
+  - `Login IPv6`
+- An additional column was added to the **Management** --> **Changes** --> **Managed IP** table:
+  - `IPv4 Address`
+  - `IPv6 Address`
+- An additional column was added to the **Management** --> **Saved config consistency** table:
+  - `Login IPv4`
+  - `Login IPv6`
 - An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
   - `Switch Priority`
+- An additional columns were added to the **Technology** --> **Management** --> **Telnet access** table:
+  - `Login IPv4`
+  - `Login IPv6`
 - An additional columns were added to the **Technology** --> **Management** --> **Logging** --> **Remote** table:
   - `Host IPv4`
   - `Host IPv6`
@@ -71,8 +90,23 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - `Server IPv6`
   - `Source IPv4`
   - `Source IPv6`
-- An additional column was added to the  **Inventory** --> **Devices** table:
-  - `Switch stack`
+- An additional columns were added to the **Discovery Snapshot** --> **Connectivity Report** table:
+  - `IPv4`
+  - `IPv6`
+- The following columns are now marked as deprecated:
+  - **Inventory** --> **Devices** --> `Login IP`
+  - **Management** --> **Discovery History** --> `Login IP`
+  - **Management** --> **Changes** --> `Login IP`
+  - **Management** --> **Changes** --> **Managed IP** --> `IP Address`
+  - **Management** --> **Saved config consistency** --> `Login IP`
+  - **Technology** --> **Management** --> **Telnet access** --> `Login IP`
+  - **Discovery Snapshot** --> **Connectivity Report** --> `IP`
+
+    !!! warning "Login IP Deprecation"
+
+        The Login IP (`loginIp`) column is being deprecated and replaced with `loginIpv4` and `loginIpv6`.
+        Please ensure all scripts, automations, or reports are properly updated to reflect this change.
+
 - Removed tables of already deprecated API endpoints:
   - `Managed Networks`
   - `Gateway Redundancy`
