NIM-19600: added RN about addition of configuration support for Viptela

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -53,6 +53,7 @@ tags: ["draft"]
 #### Configuration Management
 
 - Configuration Management now fully supports IPv6-configured devices with all available functionalities.
+- Added support for Cisco Viptela (Cisco Catalyst SD-WAN) when [API+CLI combined discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Cisco_Viptela_SD-WAN.md) is configured.
 
 ### Other Changes
 
