NIM-19641 Fix Vendor Improvements 7.3 RN

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -13,7 +13,7 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## `v7.3.0` (UNRELEASED)
+## v7.3.0 (UNRELEASED)
 
 ### New Features
 
@@ -167,8 +167,8 @@ and enter the name of the list as it appears in the configuration.
 
 #### Vendor Support and Improvements
 
-- Interface uptime/downtime is now available for **Arista**.
-- Switch priority is now available for **Cisco** **StackWise**.
+- Interface uptime/downtime is now available for **Arista** located in the new `Last Status Change` (`lastStatusChange`) column in the **Inventory** > **Interfaces** table.
+- Switch priority is now available for **Cisco** **StackWise** located in the new `Switch Priority` (`switchPriority`) **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table.
 - Added IPv6 support for the FortiGate zone firewall task.
 - Added IPv6 support for FortiGate GRE tunnels.
 - Added IPv6 support for the Cisco ACI, ASA, IOS, and IOS-XE NTP task.
@@ -180,8 +180,6 @@ and enter the name of the list as it appears in the configuration.
 - Added IPv6 support for Cisco ASA IPv6 tunnels.
 - Added IPv6 support for Cisco ASA, IOS, and IOS-XE IPv6 IPsec.
 - New `Switch stack` column added in **Inventory** --> **Devices** to show if switch is considered as stack
-- Downloading the content of the `External Dynamic List` object for **Palo Alto**'s URL Filtering and IP List must be
-[enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_PALOALTO_EDL_IPLIST`, `ENABLE_PALOALTO_EDL_URLLIST`).
 
 #### Advanced Filters
 
@@ -265,6 +263,12 @@ Newly added features which need to be explicitly enabled in service files. You c
 The path lookup capability for Layer 2 (L2) has been added to Cisco ACI Service Graphs.
 
 To collect Service Graph data, the feature flag `ENABLE_ACI_SERVICEGRAPHS_ENDPOINTS` must be enabled. For more information, see [feature flag documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-service-graphs).
+
+#### Palo Alto External Dynamic Lists
+
+The ingestion of Palo Alto's External Dynamic Lists for URL Filtering and IP Lists is currently available as an experimental feature.
+
+To access this functionality, respective [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md#palo-alto-external-dynamic-lists) must be enabled. (`ENABLE_PALOALTO_EDL_IPLIST` and `ENABLE_PALOALTO_EDL_URLLIST`).
 
 #### Transparent Firewalls
 
