NIM-19641 Fix Vendor Improvements 7.3 RN

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -13,38 +13,11 @@ description: In this section, you can find the release notes for `v7.3` releases
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## `v7.3.0` (UNRELEASED)
+## v7.3.0 (UNRELEASED)
 
-### Improvements
+### New Features
 
-#### GUI
-
-- An additional column was added to the **Inventory** --> **Interfaces** table:
-  - `Last Status Change`
-- An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
-  - `Switch Priority`
-- Removed tables of already deprecated API endpoints:
-  - `Managed Networks`
-  - `Gateway Redundancy`
-
-  !!! info "IPv4 Managed IP Summary table"
-
-      As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
-
-- IP Input Enhancement:
-  - **Search Functionality**: Users can perform keyword-based searches within the IP list to quickly locate specific entries.
-  - **IP List Management**: Users can efficiently manage IP addresses through enhanced multi-selection capabilities. Multiple IPs can be selected via:
-    - `Shift + Left Click` to select range.
-    - `Click-and-Drag`, similar to text selection in a paragraph. 
-
-      Once selected, IP addresses can be copied or removed from the list.
-
-#### Layout Optimization for Large Circular Graphs
-
-In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
-is now fully supported at the API level and is also fully integrated into the UI starting with this release.
-
-#### IPv6 Support to Discovery
+#### IPv6 Discovery Support
 
 Extended network discovery capabilities to support IPv6 networks alongside IPv4, ensuring all existing IPv4 functionality remains unaffected.
 
@@ -72,6 +45,89 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - Include/Exclude/Whitelist networks
   - Device credentials
 
+### Improvements
+
+#### GUI
+
+- An additional column was added to the **Inventory** --> **Interfaces** table:
+  - `Last Status Change`
+- An additional column was added to the **Inventory** --> **Devices** table:
+  - `Login IPv4`
+  - `Login IPv6`
+  - `Switch stack`
+- An additional column was added to the **Management** --> **Discovery History** table:
+  - `Login IPv4`
+  - `Login IPv6`
+- An additional column was added to the **Management** --> **Changes** table:
+  - `Login IPv4`
+  - `Login IPv6`
+- An additional column was added to the **Management** --> **Changes** --> **Managed IP** table:
+  - `IPv4 Address`
+  - `IPv6 Address`
+- An additional column was added to the **Management** --> **Saved config consistency** table:
+  - `Login IPv4`
+  - `Login IPv6`
+- An additional column was added to the **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table:
+  - `Switch Priority`
+- An additional columns were added to the **Technology** --> **Management** --> **Telnet access** table:
+  - `Login IPv4`
+  - `Login IPv6`
+- An additional columns were added to the **Technology** --> **Management** --> **Logging** --> **Remote** table:
+  - `Host IPv4`
+  - `Host IPv6`
+  - `Src Address IPv4`
+  - `Src Address IPv6`
+- An additional columns were added to the **Technology** --> **Management** --> **NTP** --> **Sources** table:
+  - `Source IPv4`
+  - `Source IPv6`
+- An additional columns were added to the **Technology** --> **Management** --> **SNMP** --> **Trap Hosts** table:
+  - `Destination Host IPv4`
+  - `Destination Host IPv6`
+  - `Source IPv4`
+  - `Source IPv6`
+- An additional columns were added to the **Technology** --> **Security** --> **AAA** --> **Servers** table:
+  - `Server IPv4`
+  - `Server IPv6`
+  - `Source IPv4`
+  - `Source IPv6`
+- An additional columns were added to the **Discovery Snapshot** --> **Connectivity Report** table:
+  - `IPv4`
+  - `IPv6`
+- The following columns are now marked as deprecated:
+  - **Inventory** --> **Devices** --> `Login IP`
+  - **Management** --> **Discovery History** --> `Login IP`
+  - **Management** --> **Changes** --> `Login IP`
+  - **Management** --> **Changes** --> **Managed IP** --> `IP Address`
+  - **Management** --> **Saved config consistency** --> `Login IP`
+  - **Technology** --> **Management** --> **Telnet access** --> `Login IP`
+  - **Discovery Snapshot** --> **Connectivity Report** --> `IP`
+
+    !!! warning "Login IP Deprecation"
+
+        The Login IP (`loginIp`) column is being deprecated and replaced with `loginIpv4` and `loginIpv6`.
+        Please ensure all scripts, automations, or reports are properly updated to reflect this change.
+
+- Removed tables of already deprecated API endpoints:
+  - `Managed Networks`
+  - `Gateway Redundancy`
+
+  !!! info "IPv4 Managed IP Summary table"
+
+      As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
+
+- IP Input Enhancement:
+  - **Search Functionality**: Users can perform keyword-based searches within the IP list to quickly locate specific entries.
+  - **IP List Management**: Users can efficiently manage IP addresses through enhanced multi-selection capabilities. Multiple IPs can be selected via:
+    - `Shift + Left Click` to select range.
+    - `Click-and-Drag`, similar to text selection in a paragraph. 
+
+      Once selected, IP addresses can be copied or removed from the list.
+
+#### Layout Optimization for Large Circular Graphs
+
+In release 7.2, we added an autonomous optimization switch from circular to universal layout for graphs with more than 100 nodes. This functionality
+is now fully supported at the API level and is also fully integrated into the UI starting with this release.
+
 #### Configuration Management
 
 - Simplified configuration selection for comparison.
@@ -79,13 +135,13 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 
 #### Network Discovery
 
-- **New Device** –- **AWS Application Load Balancer (ALB)**
+- **New Device -- AWS Application Load Balancer (ALB)**
   - Initial support for data collection & inventory. The path lookup via ALB is not supported yet.
 
-- **New Device** –- **Azure ExpressRoute Circuit (ERC)**
+- **New Device -- Azure ExpressRoute Circuit (ERC)**
   - Data collection and end-to-end path lookup via ERC is now supported. The path lookup via ERC when deployed in vWAN is not supported yet.
 
-- **New Device** –- **Azure RouteServer (ARS)**
+- **New Device -- Azure RouteServer (ARS)**
   - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
 
 - **New Capabilities -- Arista**
@@ -97,39 +153,22 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 - **New Capabilities -- PaloAlto (PAN-OS)**
   - Support for IP and PREDEFINED-IP type objects of `External Dynamic List` has been added.
 
-- **New Device** – **Meraki cloud-managed Catalyst switches**
+- **New Device -- Meraki Cloud-managed Catalyst Switches**
   - Now discoverable via the Meraki API  
   - Identification: Firmware prefix `CS` and Monitoring Version `n/a`  
   - Discovery can be disabled via [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md).
 
-#### Initial Transparent Firewall Support (Behind Feature Flag)
+#### Path Lookup
 
-Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**,
-manual link configuration is required to incorporate them into the network model.  
-
-To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) must be activated. Once enabled,
-transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
-
- **Supported Vendors & Technologies**
-
- - **Virtual Wire Setup**
- 
-  A new table has been added under **Technology → Interfaces → Virtual-wires**, supporting:
-  
-  - Palo Alto PAN-OS
-  - Cisco Firepower
-  - Fortinet FortiGate / FortiOS
-  - Forcepoint NGFW
-
- - **Virtual Bridge Property**
- 
-  Currently supported for Cisco Firepower. A new **Virtual Bridge** attribute has been added to the following tables:
- 
-  - **Technology → Interfaces → Switchport**
-  - **Technology → Addressing → MAC Table**
+- Using Palo Alto's `External Dynamic List` in combination with end-to-end path lookup:
+  - To investigate a Path Lookup scenario for a specific IP expected to be in the dynamic list, use the `Source / Destination IP fields` and enter the IP address.
+  - If the content of the dynamic list is not available, or if you need to find where a specific list is being used, use the `Source / Destination Region fields`
+and enter the name of the list as it appears in the configuration.
 
 #### Vendor Support and Improvements
 
+- Interface uptime/downtime is now available for **Arista** located in the new `Last Status Change` (`lastStatusChange`) column in the **Inventory** > **Interfaces** table.
+- Switch priority is now available for **Cisco** **StackWise** located in the new `Switch Priority` (`switchPriority`) **Technology** --> **Platforms** --> **Cisco VSS** --> **Chassis** table.
 - Added IPv6 support for the FortiGate zone firewall task.
 - Added IPv6 support for FortiGate GRE tunnels.
 - Added IPv6 support for the Cisco ACI, ASA, IOS, and IOS-XE NTP task.
@@ -140,20 +179,7 @@ transparent firewalls will appear in the **graph topology**, and **basic path lo
 - Added IPv6 support for Cisco ASA IPv6 routing.
 - Added IPv6 support for Cisco ASA IPv6 tunnels.
 - Added IPv6 support for Cisco ASA, IOS, and IOS-XE IPv6 IPsec.
-
-#### Path Lookup
-
-- Using Palo Alto's `External Dynamic List` in combination with end to end path lookup:
-  - To investigate a Path Lookup scenario for a specific IP expected to be in the dynamic list, use the `Source / Destination IP fields` and enter the IP address.
-  - If the content of the dynamic list is not available, or if you need to find where a specific list is being used, use the `Source / Destination Region fields`
-and enter the name of the list as it appears in the configuration.
-
-#### Vendor Support and Improvements
-
-- Interface uptime/downtime is now available for **Arista**.
-- Switch priority is now available for **Cisco** **StackWise**.
-- Downloading the content of the `External Dynamic List` object for **Palo Alto**'s URL Filtering and IP List must be
-[enabled manually via a feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery) (`ENABLE_PALOALTO_EDL_IPLIST`, `ENABLE_PALOALTO_EDL_URLLIST`).
+- New `Switch stack` column added in **Inventory** --> **Devices** to show if switch is considered as stack
 
 #### Advanced Filters
 
@@ -226,3 +252,47 @@ now support **Uptime** as a device property.
 - *Technology > Management > AAA > Password Strength* - **Password Strength Enabled**
   - Green Success - Check is enabled on supported platforms
   - Amber Warning - Check is not enabled  on supported platforms
+
+### Experimental Features
+
+Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
+
+
+#### Cisco ACI Service Graphs Improvements
+
+The path lookup capability for Layer 2 (L2) has been added to Cisco ACI Service Graphs.
+
+To collect Service Graph data, the feature flag `ENABLE_ACI_SERVICEGRAPHS_ENDPOINTS` must be enabled. For more information, see [feature flag documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-service-graphs).
+
+#### Palo Alto External Dynamic Lists
+
+The ingestion of Palo Alto's External Dynamic Lists for URL Filtering and IP Lists is currently available as an experimental feature.
+
+To access this functionality, respective [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md#palo-alto-external-dynamic-lists) must be enabled. (`ENABLE_PALOALTO_EDL_IPLIST` and `ENABLE_PALOALTO_EDL_URLLIST`).
+
+#### Transparent Firewalls
+
+Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**,
+manual link configuration is required to incorporate them into the network model.
+
+To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) (`ENABLE_MANUAL_LINKS`) must be activated.
+
+Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
+
+##### Supported Vendors & Technologies
+
+ - **Virtual Wire Setup**
+
+  A new table has been added under **Technology → Interfaces → Virtual-wires**, supporting:
+
+  - Palo Alto PAN-OS
+  - Cisco Firepower
+  - Fortinet FortiGate / FortiOS
+  - Forcepoint NGFW
+
+ - **Virtual Bridge Property**
+
+  Currently supported for Cisco Firepower. A new **Virtual Bridge** attribute has been added to the following tables:
+
+  - **Technology → Interfaces → Switchport**
+  - **Technology → Addressing → MAC Table**
