NIM-19713 cloudInterfaceEndpoints to RN [7.5]

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -43,6 +43,7 @@ tags: ["draft"]
 - Added mapping for STP port statuses on Meraki switches.
 - A new task Cloud Subnets was added to save more information related to cloud subnets in the device JSON.
 - A new task Cloud Scaling Groups was added to save more information related to scaling groups in the device JSON.
+- A new task Cloud Interface Endpoints was added to save more information related to interface endpoints in the device JSON.
 - Tables in **Technology → Cloud → Endpoints** now also include instances from Azure Virtual Machine Scale Sets in Uniform mode.
 
   !!! warning "Do not forget to update IAM policy"
